--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="styles.css">
+
 
 </head>
 
@@ -11,6 +13,7 @@
             <div>
                 <label for="">Name</label>
                 <input type="text" id="nameInput">
+                <div id="nameInput-error" class="hide">error</div>
             </div>
 
             <div>
@@ -25,6 +28,7 @@
             <div>
                 <label for="">Password</label>
                 <input type="password" id="passwordInput">
+                <div id="passwordInput-error" class="hide">password is short</div>
             </div>
 
             <div>
@@ -39,12 +43,14 @@
                 <input type="date" id="bdayInput">
             </div>
 
-            <input type="button" value="send" onclick="nameFunc()">
+            <input type="button" value="send" id="saveButton">
+            <input type="button" value="send" id="delete">
         </form>
     </div>
 
 </body>
 <script src="index.js"></script>
 <script src="index2.js"></script>
+
 
 </html>
