pridanie error message

--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
             <div>
                 <label for="">Name</label>
                 <input type="text" id="nameInput">
-                <div id="nameInput-error" class="hide">error</div>
+                <div id="nameInput-error" class="hide">3 characters required</div>
             </div>
 
             <div>
                 <label for="">Surname</label>
                 <input type="text" id="surnameInput">
+                <div id="surnameInput-error" class="hide">3 characters required</div>
             </div>
             <div>
                 <label for="">UserName</label>
                 <input type="text" id="usernameInput">
+                <div id="usernameInput-error" class="hide">3 characters required</div>
             </div>
 
             <div>
                 <label for="">Password</label>
                 <input type="password" id="passwordInput">
-                <div id="passwordInput-error" class="hide">password is short</div>
+                <div id="passwordInput-error" class="hide">3 characters required</div>
             </div>
 
             <div>
