--- a/index.html
+++ b/index.html
@@ -50,6 +50,24 @@
         </form>
     </div>
 
+    <div class="container">
+        <table id="user_table">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Surname</th>
+                    <th>Password</th>
+                    <th>Username</th>
+                </tr>
+            </thead>
+            <tbody>
+
+
+            </tbody>
+        </table>
+
+    </div>
+
 </body>
 <script src="index.js"></script>
 <script src="index2.js"></script>
